--- a/index.html
+++ b/index.html
@@ -309,8 +309,8 @@
 </body>
 
 
-<div class="attribution">
-  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+<div class="attribution text-center align-center font-11px">
+  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" class="text-blue" target="_blank">Frontend Mentor</a>.
   Coded by <a href="https://www.github.com/Akayleo">Akayleo</a>.
 </div>
 
